--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     <!-- You will only need to add this meta-data tag, but make sure it's a child of application -->
-    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAfztrqwn-ADVVSRcCn8-k3NR_sie6j22I"/>
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value=""/>
 
     <!-- You will also only need to add this uses-libray tag -->
     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
